--- a/styles/style.css
+++ b/styles/style.css
@@ -105,9 +105,10 @@
   color: #838383;
 }
 
-.header__paragraph {
+.header__hours {
   margin-left: 80px;
   margin-bottom: 40px;
+  justify-content: flex-start;
 }
 
 .header__address {
@@ -116,8 +117,9 @@
   justify-content: flex-end;
 }
 
-.header__footer-times {
+.header__footer-item {
   list-style-type: none;
+  padding: 0;
 }
 
 .recipes {
