--- a/styles/style.css
+++ b/styles/style.css
@@ -192,7 +192,7 @@
   display: flex;
   justify-content: center;
   margin-top: 100px;
-  margin-bottom: 80px;
+  margin-bottom: 0;
   font-family: Inter;
   font-style: normal;
   font-weight: 500;
@@ -200,17 +200,20 @@
   line-height: 52px;
 }
 
-.reservation__form {
+.form {
   display: flex;
   justify-content: center;
 }
 
-.form__admin {
-  max-width: 385px;
+.reservation__form {
+  margin-top: 80px;
+  margin-bottom: 120px;
 }
 
 .form__container {
   border: 0;
+  max-width: 385px;
+  padding: 0;
 }
 
 .form__label {
@@ -234,10 +237,6 @@
   line-height: 30px;
   color: #838383;
   padding: 20px 15px;
-}
-
-.form__handlers {
-  border: 0;
 }
 
 .form__button {
@@ -272,6 +271,5 @@
   display: flex;
   gap: 12px;
   justify-content: center;
-  margin-bottom: 120px;
   padding: 0;
 }
