--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -19,3 +19,35 @@
   max-width: 800px;
   margin: auto;
 }
+
+.menu__cards {
+  display: flex;
+  margin-top: 100px;
+}
+
+.card {
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+  gap: 100px;
+  flex-wrap: wrap;
+}
+
+.card__content {
+  display: flex;
+  flex-direction: column;
+}
+
+.card__content_size {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.card__content_type {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.card__content_flavour {
+  display: flex;
+}
