--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -5,6 +5,7 @@
   background-size: cover;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .menu__title {
@@ -23,31 +24,52 @@
 .menu__cards {
   display: flex;
   margin-top: 100px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 100px;
 }
 
 .card {
   display: flex;
-  margin: auto;
   justify-content: space-between;
-  gap: 100px;
-  flex-wrap: wrap;
+  list-style-type: none;
+  width: 540px;
 }
 
-.card__content {
-  display: flex;
-  flex-direction: column;
+.card__title {
+  margin-bottom: 32px;
 }
 
 .card__content_size {
   display: flex;
   justify-content: flex-start;
+  flex-direction: column;
+  margin: 0;
 }
 
 .card__content_type {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
+  flex-direction: column;
+  margin: 0;
 }
 
 .card__content_flavour {
   display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 100px;
+  margin-top: 0;
+}
+
+.card__list-item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+
+.card__list-divider {
+  border-bottom: 1px solid black;
 }
