--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,8 @@
 .footer {
   background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-  width: 100%;
-  background-size: cover;
+  color: white;
+  margin: 0;
+  padding: 60px 100px 60px 80px;
 }
 
 .footer__content {
@@ -12,21 +13,50 @@
 .footer__logo {
   width: 105px;
   height: 39px;
-  margin: 60px 0 108px 80px;
-}
-
-.footer__social {
-  margin: 60px 100px 0 0;
 }
 
 .footer__social-heading {
-  margin: 0;
+  display: flex;
+  justify-content: end;
+  margin: 0 0 20px 0;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.footer__social-icon {
+  max-width: 16px;
+  margin-right: 16px;
+}
+
+.footer__social-link:hover {
+  color: #c1c1c1;
+}
+
+.footer__list {
+  padding: 0;
 }
 
 .footer__list-item {
+  display: flex;
+  margin-bottom: 10px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.footer__list-item:last-of-type {
+  margin-bottom: 0;
 }
 
 .footer__copyright {
-  display: flex;
-  margin: 0 108px 60px 80px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
 }
