--- a/blocks/header.css
+++ b/blocks/header.css
@@ -37,6 +37,10 @@
   line-height: 20px;
 }
 
+.nav__link:hover {
+  color: #2f80ed;
+}
+
 .header__title {
   max-width: 729px;
   margin-top: 183px;
